# great-hole

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .lvimrc  AUTHORS  CMakeLists.txt  CMakePresets.json  ChangeLog  Makefile.am  README  build-all.sh  build-debian.sh  build-msvc-ninja.ps1  build-windows.ps1  config.h.in  configure.ac  example-vpn-client.lua  example-vpn-server.lua  example.lua  test-async-log.lua  vcpkg-configuration.json  vcpkg.json
debian/: README.Debian  changelog  control  copyright  great-hole.service  rules
libs/: Makefile.am
libs/lua-5.3.2/: Makefile.am
m4/: ax_cxx_compile_stdcxx.m4
scripts/: copy-binaries.ps1  copy-desktop-hole-binaries.ps1
src/: CMakeLists.txt  Endpoint.hpp  EndpointUdp.hpp  EndpointUdpMuxServer.cpp  Filter.hpp  LuaEngine.hpp  LuaInterface.hpp  LuaLib.cpp  Makefile.am  Packet.hpp  Pipeline.cpp  Resolver.cpp  Resolver.hpp  ResolverHelper.cpp  ResolverHelper.hpp  ServiceBase.hpp  endpoint-exec.cpp  endpoint-exec.hpp  endpoint-icmp.hpp  endpoint-tun.cpp  endpoint-tun.hpp  endpoint-udp-dyn-mux-client.cpp  endpoint-udp-dyn-mux-client.hpp  endpoint-udp-dyn-mux-protocol.hpp  endpoint-udp-dyn-mux-server.cpp  endpoint-udp-dyn-mux-server.hpp  endpoint-udp-mux-client.cpp  endpoint-udp-mux-client.hpp  endpoint-udp-mux-server.cpp  endpoint-udp-mux-server.hpp  endpoint-udp.cpp  endpoint-udp.hpp  endpoint.cpp  endpoint.hpp  error-code.cpp  error-code.hpp  filter-xor.hpp  filter-zip.hpp  filter.cpp  filter.hpp  (+18 more)
src/android/: CMakeLists.txt  JniTunnelDataPlaneNative.cpp  TunnelDataPlane.cpp  TunnelDataPlane.hpp  build_deps.sh  data-plane-jni.md  info_kghost_android_hole_vpn_dataplane_JniTunnelDataPlaneNative.h
src/application/: CMakeLists.txt  ConnectionTracker.cpp  ConnectionTracker.hpp  DESIGN.md  PacketHeader.hpp  README.md  TunnelDataPlane.cpp  TunnelDataPlane.hpp  VpnClientMultiChannel.cpp  VpnClientMultiChannel.hpp  VpnConnTrack.cpp  VpnConnTrack.hpp  VpnServer.cpp  VpnServer.hpp  VpnServer.md
src/application/tests/: CMakeLists.txt  CapturedPackets.hpp  TestConnectionTracker.cpp  TestVpnClientMultiChannel.cpp  TestVpnConnTrack.cpp  TestVpnServer.cpp
src/base/: CMakeLists.txt  Cancel.hpp  DESIGN.md  ErrorCode.cpp  ErrorCode.hpp  GHApi.hpp  README.md  Service.hpp  ServiceBase.cpp  ServiceBase.hpp  StateMachine.hpp  Utils.hpp
src/base/Utils/: All.hpp  Any.hpp  Comparator.hpp  Endian.hpp  Function.hpp  Generator.hpp  IndexOf.hpp  InstanceOf.hpp  Nothing.hpp  Overload.hpp  ToC.hpp
src/base/tests/: CMakeLists.txt  TestCancel.cpp  TestServiceBase.cpp  TestStateMachine.cpp
src/core/: BackoffTimer.cpp  BackoffTimer.hpp  CMakeLists.txt  DESIGN.md  DeferredPacketInjector.hpp  Endpoint.cpp  Endpoint.hpp  EndpointTun.cpp  EndpointTun.hpp  EndpointTunSplitIp.cpp  EndpointTunSplitIp.hpp  EndpointUdp.cpp  EndpointUdp.hpp  EndpointUdpDynMux.cpp  EndpointUdpDynMux.hpp  EndpointUdpDynMuxClient.cpp  EndpointUdpDynMuxProtocol.hpp  EndpointUdpDynMuxProtocol.md  EndpointUdpDynMuxServer.cpp  EndpointUdpMux.cpp  EndpointUdpMux.hpp  EndpointUdpMuxClient.cpp  EndpointUdpMuxServer.cpp  EndpointUdpMuxServer.hpp  Filter.hpp  FilterXor.hpp  Packet.hpp  PacketBuilder.hpp  Pipeline.cpp  Pipeline.hpp  PipielineUsageCounter.hpp  README.md  UtilConsole.cpp  UtilConsole.hpp
src/core/tests/: CMakeLists.txt  TestPacketBuilder.cpp  TestTunSplitIp.cpp  TestUdp.cpp  TestUdpDynMux.cpp  TestUdpMux.cpp
src/core/windows/: CMakeLists.txt  DESIGN.md  EndpointWinDivert.cpp  EndpointWinDivert.hpp  README.md
src/core/windows/tests/: CMakeLists.txt  FakeWinDivert.cpp  FakeWinDivert.hpp  FakeWinDivertDll.cpp  TestEndpointWinDivert.cpp
src/interface/: CMakeLists.txt  Interface.hpp
src/lua/: CMakeLists.txt  LuaEngine.cpp  LuaEngine.hpp  LuaInterface.cpp  LuaInterface.hpp  LuaLib.cpp  LuaLib.hpp  LuaLibCommon.hpp  LuaLibEndpoint.cpp  LuaLibFilter.cpp  LuaLibPipeline.cpp  LuaLibTunSplitIp.cpp  LuaLibUdp.cpp  LuaLibUdpDynMux.cpp  LuaLibUdpMux.cpp  LuaLibVpnServer.cpp  main.cpp
src/resolvers/: AresResolver.cpp  AresResolver.hpp  CMakeLists.txt  DESIGN.md  README.md  Resolver.cpp  Resolver.hpp  ResolverCombinedEndpoint.cpp  ResolverCombinedEndpoint.hpp  ResolverDnsService.cpp  ResolverDnsService.hpp  ResolverHelper.cpp  ResolverHelper.hpp  ResolverIpDns.cpp  ResolverIpDns.hpp  ResolverNumberPort.cpp  ResolverNumberPort.hpp  ResolverServicePort.cpp  ResolverServicePort.hpp  ResolverStaticEndpoint.cpp  ResolverStaticEndpoint.hpp  ResolverStaticIp.cpp  ResolverStaticIp.hpp  WindowsAsyncResolver.cpp  WindowsAsyncResolver.hpp
src/resolvers/tests/: CMakeLists.txt  TestResolver.cpp
src/windows/: CMakeLists.txt  DESIGN.md  Interface.cpp  README.md
src/windows/flow/: CMakeLists.txt  DESIGN.md  README.md  WinDivertFlowSniffer.cpp  WinDivertFlowSniffer.hpp
src/windows/flow/tests/: CMakeLists.txt  TestWinDivertFlowSniffer.cpp
src/windows/flow/tools/: CMakeLists.txt  FlowDump.cpp
src/windows/policy/: CMakeLists.txt  DESIGN.md  FlowTracker.cpp  FlowTracker.hpp  PolicyEngine.cpp  PolicyEngine.hpp  PolicyRegistry.cpp  PolicyRegistry.hpp  PolicySelector.cpp  PolicySelector.hpp  ProcessTreeTracker.cpp  ProcessTreeTracker.hpp  README.md
src/windows/policy/tests/: CMakeLists.txt  TestFlowTracker.cpp  TestPolicyRegistry.cpp  TestPolicySelector.cpp  TestProcessTreeTracker.cpp
src/windows/utils/: CMakeLists.txt  Strings.cpp  Strings.hpp
src/windows/vcpkg-triplets/: x64-windows-asan.cmake
src_fiber/: CMakeLists.txt  Cancel.hpp  Endpoint.hpp  EndpointTun.cpp  EndpointTun.hpp  EndpointUdp.cpp  EndpointUdp.hpp  EndpointUdpDynMuxClient.cpp  EndpointUdpDynMuxClient.hpp  EndpointUdpDynMuxProtocol.md  EndpointUdpDynMuxServer.cpp  EndpointUdpDynMuxServer.hpp  EndpointUdpMuxClient.cpp  EndpointUdpMuxClient.hpp  EndpointUdpMuxServer.cpp  EndpointUdpMuxServer.hpp  Filter.cpp  FilterXor.hpp  LuaEngine.cpp  LuaEngine.hpp  LuaInterface.cpp  LuaInterface.hpp  LuaLib.cpp  LuaLib.hpp  Packet.hpp  Pipeline.cpp  (+28 more)
tests/: CMakeLists.txt  TestResolver.cpp  TestUdp.cpp  test_udp_dyn_mux.cpp  test_udp_dyn_mux_fiber.cpp  test_udp_fiber.cpp  test_udp_mux.cpp  test_udp_mux_fiber.cpp
(+3 files in other folders)
